calling API for create note and getnotes

--- a/src/app/components/create-notes/create-notes.component.html
+++ b/src/app/components/create-notes/create-notes.component.html
@@ -1,13 +1,13 @@
-
+<form [formGroup]="createForm">
     <mat-card class="maincontainer">
         <div class="title" *ngIf="show">
             <input name="text" class="title1" type="text" placeholder="Title" formControlName="title">
-            <mat-error></mat-error>
+
             <img height="30px" width="30px" src="../../../assets/push_pin_FILL0_wght400_GRAD0_opsz48.svg" alt="">
         </div>
         <div class="descript" *ngIf="show || !show" (click)="isShow()">
             <input class="title2" type="text" matInput placeholder="Take a note..." formControlName="description">
-            <mat-error> </mat-error>
+
             <div class="icons" *ngIf="!show">
                 <img height="25px" width="25px" src="../../../assets/check_box_FILL0_wght400_GRAD0_opsz48.svg" alt="">
                 <img height="25px" width="25px" src="../../../assets/brush_FILL0_wght400_GRAD0_opsz48.svg" alt="">
@@ -25,3 +25,4 @@
         </div>
 
     </mat-card>
+</form>
