--- a/src/app/components/display-note/display-note.component.html
+++ b/src/app/components/display-note/display-note.component.html
@@ -1,7 +1,11 @@
 <div class="main">
     <div class="maincontainer">
         <div class="sub">
-           <img class="pin" height="30px" width="30px" src="../../../assets/push_pin_FILL0_wght400_GRAD0_opsz48.svg" alt="">
+            <img class="pin" height="30px" width="30px" src="../../../assets/push_pin_FILL0_wght400_GRAD0_opsz48.svg"
+                alt="">
+               
         </div>
+
     </div>
+
 </div>
