--- a/src/app/components/get-all-notes/get-all-notes.component.html
+++ b/src/app/components/get-all-notes/get-all-notes.component.html
@@ -1,2 +1,2 @@
 <app-create-notes></app-create-notes>
-<app-display-note></app-display-note>
+<app-display-note [childMessage]="noteArray"></app-display-note>
