--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -42,7 +42,7 @@
             <img src="../../../assets/edit-lable.svg" />Label</a>
           <a mat-list-item>
             <img src="../../../assets/archive.svg" />Archive</a>
-          <a mat-list-item>
+          <a mat-list-item (click)="trash()" >
             <img src="../../../assets/trash.svg" />Trash</a>
         </mat-nav-list>
       </mat-sidenav>
