--- a/src/app/components/display-note/display-note.component.html
+++ b/src/app/components/display-note/display-note.component.html
@@ -6,6 +6,9 @@
             <img height="30px" width="30px" src="../../../assets/push_pin_FILL0_wght400_GRAD0_opsz48.svg" alt="">
         </div>
             <span class="title2">{{notes.description}}</span>
+            <div class="sub1">
+                <app-icon [noteCard]="notes"></app-icon>
+            </div>
             
         </div>   
     </div>
