--- a/src/app/components/display-note/display-note.component.scss
+++ b/src/app/components/display-note/display-note.component.scss
@@ -1,24 +1,21 @@
 .main{
     height: 120vh;
-    width: 50vw;
+    width: 60vw;
     display: flex;
     justify-content: space-evenly;
-    
-    flex-direction: row;
+    align-items: center;
     flex-wrap: wrap;
     position: relative;
-    margin-top: 20px;
-    left: -20px;
-    top: 30px;
+    
+    left: 200px;
 }
 .maincontainer{
-    height: 15%;
-    width: 30%;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-   box-shadow: 5px 5px 5px gainsboro;
+    border: 1px solid rgb(186, 184, 184);
+    padding: 2px 1px;
+    border-radius: 8px;
+    box-sizing: border-box;
+    box-shadow: 0 3px 3px 3px rgb(222, 222, 222);
    
 }
 .sub{
@@ -34,56 +31,45 @@
        padding: 0px;
        padding-left: 150px;
     }
-    .main{
-        height: 120vh;
-        width: 50vw;
-        display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-        flex-direction: row;
-        flex-wrap: wrap;
-        position: relative;
-        top: 20px;
-        left: 200px;
-    }
-    .maincontainer{
-        height: 15%;
-        width: 30%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: row;
-       box-shadow: 5px 5px 5px gainsboro;
-       
-    }
-    .sub{
-    height: 100%;
+   
+.sub{
+height: 100%;
+width: 100%;
+display: flex;
+border: 1px solid gainsboro;
+border-radius: 5px;
+flex-direction: column;
+align-items: center;
+}
+.sub2{
+    height: 35%;
+    width: 97%;
+    display: flex;
+    border: 0px solid red;
+    align-items: center;
+    justify-content: space-evenly;
+}
+.title1{
+    height: 30%;
+    width: 95%;
+    border: 0px;
+    font-size: 15px;
+   
+}
+.title2{
+    height: 30%;
+    width: 95%;
+    border: 0px;
+    font-size: 15px;
+   
+}
+
+.sub1{
+    height: 35%;
     width: 100%;
     display: flex;
-    border: 1px solid gainsboro;
-    border-radius: 5px;
-    flex-direction: column;
-    align-items: center;
-    }
-    .sub2{
-        height: 35%;
-        width: 97%;
-        display: flex;
-        border: 0px solid red;
-        align-items: center;
-        justify-content: space-evenly;
-    }
-    .title1{
-        height: 30%;
-        width: 95%;
-        border: 0px;
-        font-size: 15px;
-       
-    }
-    .title2{
-        height: 30%;
-        width: 95%;
-        border: 0px;
-        font-size: 15px;
-       
-    }
+    border: 0px solid red;
+    align-items: flex-end;
+    padding-top: 17px;
+   
+}
