calling api for trace and archieve

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -40,7 +40,7 @@
             <img src="../../../assets/remainder.svg" />Reminder</a>
           <a mat-list-item>
             <img src="../../../assets/edit-lable.svg" />Label</a>
-          <a mat-list-item>
+          <a mat-list-item (click)= "archieve()">
             <img src="../../../assets/archive.svg" />Archive</a>
           <a mat-list-item (click)="trash()" >
             <img src="../../../assets/trash.svg" />Trash</a>
