--- a/src/app/components/display-note/display-note.component.html
+++ b/src/app/components/display-note/display-note.component.html
@@ -2,10 +2,10 @@
     <div class="maincontainer" *ngFor="let notes of childMessage">
         <div class="sub">
             <div class="sub2">
-            <span class="title1">{{notes.title}}</span>
+            <span class="title1" (click)="openDialog(notes)">{{notes.title}}</span>
             <img height="30px" width="30px" src="../../../assets/push_pin_FILL0_wght400_GRAD0_opsz48.svg" alt="">
         </div>
-            <span class="title2">{{notes.description}}</span>
+            <span class="title2" (click)="openDialog(notes)">{{notes.description}}</span>
             <div class="sub1">
                 <app-icon [noteCard]="notes"></app-icon>
             </div>
