--- a/src/app/components/update-note/update-note.component.html
+++ b/src/app/components/update-note/update-note.component.html
@@ -2,12 +2,12 @@
     <div>
         <mat-card class="dailogStyles">
             <h1 mat-dialog-title>
-                <input class="add-note-input" matInput placeholder="Title" [ngModel]="noteTitle" />
+                <textarea class="add-note-input" matInput placeholder="Title" [(ngModel)]="noteTitle"></textarea>
                 <img src="../../../assets/push_pin_FILL0_wght400_GRAD0_opsz48.svg" alt="" width="30px" height="30px">
             </h1>
             <div mat-dialog-content>
-                <textarea #desc class="add-note-input" matInput placeholder="Take a note...."
-                    [(ngModel)]="noteDescription" [(ngModel)]="noteDescription"></textarea>
+                <textarea class="add-note-input" matInput placeholder="Take a note...."
+                    [(ngModel)]="noteDescription"></textarea>
             </div>
             <div style="display: flex;">
 
