--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -38,7 +38,7 @@
     <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'" [fixedInViewport]="mobileQuery.matches"
       fixedTopGap="560">
       <mat-nav-list class="nav-list">
-        <a mat-list-item>
+        <a mat-list-item (click)="notes()">
           <img src="../../../assets/notes.svg" />Notes</a>
         <a mat-list-item>
           <img src="../../../assets/remainder.svg" />Reminder</a>
