--- a/src/app/components/trash/trash.component.html
+++ b/src/app/components/trash/trash.component.html
@@ -1,1 +1,1 @@
-<app-display-note [childMessage]="noteArray"></app-display-note>
+<app-display-note [childMessage]="noteArray" (deleteNoteToRef)="delete($event)" (restoreNoteToRef)="restore($event)"></app-display-note>
