--- a/src/app/components/archieve/archieve.component.html
+++ b/src/app/components/archieve/archieve.component.html
@@ -1,2 +1,2 @@
-<app-display-note [childMessage]="noteArray"></app-display-note>
+<app-display-note [childMessage]="noteArray" (unarchiveNoteToRef)="unarchive($event)"></app-display-note>
 
