--- a/src/app/components/get-all-notes/get-all-notes.component.html
+++ b/src/app/components/get-all-notes/get-all-notes.component.html
@@ -1,2 +1,2 @@
 <app-create-notes></app-create-notes>
-<app-display-note [childMessage]="noteArray"></app-display-note>
+<app-display-note [childMessage]="noteArray" (trashNoteToRef)="trash($event)" (changeColorRef)="colourchanged($event)" (archiveNoteToRef)="archive($event)" ></app-display-note>
